footer spacing fixed and will match the posts spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -163,7 +163,9 @@ p::selection {
 .sub-navbar li a:hover {
     color: var(--yellow);
 }
-
+.post-container {
+    width: 100%;
+}
 .post-scroll-title {
     margin: 15px 15px 0 15px;
     white-space: nowrap;
@@ -177,7 +179,6 @@ p::selection {
     display: flex;
     overflow-x: scroll;
     overflow-y: hidden;
-    margin-right: 15px;
 }
 @media screen and (min-width: 1000px) {
     .post-scroll {
@@ -200,6 +201,7 @@ p::selection {
 .post-card {
     background: #fff;
     width: 300px;
+    z-index: 100;
     min-width: 300px;
     max-width: 300px;
     margin: 15px;
@@ -316,18 +318,21 @@ footer {
     min-height: 250px;
     background:  #2196F3;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
     padding: 20px;
 
 }
 .footer-col {
-    padding-right: 10%;
-    min-width: 200px;
+    min-width: 300px;
+    max-width: 300px;
+    margin: 15px;
 }
 .footer h1 {
     font-size: 2em;
